<resources>
    <string name="app_name">Commuters Family</string>
    <string name="log_in">Log In</string>
    <string name="commuters_family">Commuters Family</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="account_type_spinner_entries">
        <item>Ride</item>
        <item>Drive</item>
    </string-array>
    <string name="title_activity_rider_maps">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_rider_route_map">Map</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">������</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="driver_post_button_title">Offer New Carpool</string>
    <string name="rider_post_button_title">Request New Carpool</string>
    <string name="driver_feed_title">Ride Requests</string>
    <string name="rider_feed_title">Drive Offers</string>
    <string name="post_label_from">From</string>
    <string name="post_label_to">To</string>
    <string name="post_label_passengerCount">Maximum Passengers</string>
    <string name="post_label_pickupPoint">Pickup Point</string>
    <string name="heading_recent_organizations">All Organizations</string>
    <string name="heading_my_organizations">My Organizations</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map_detail">MapDetailActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_carpool_detail">CarpoolDetailActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_new_carpool">NewCarpoolActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="infoprompt">Select One of the Following:</string>
    <string name="enter_info">Enter Your Information</string>
    <string name="info_first">First Name</string>
    <string name="info_last">Last Name</string>
    <string name="info_date">Date of Birth</string>
    <string name="info_phone">(555)555-555</string>
    <string name="info_choose_info">Choose Your Default Organization</string>
    <string name="info_save">Save Information</string>
    <string name="info_skip">Skip This</string>
    <string name="organizations_prompt">Choose an Organization</string>
    <string name="info_join_an_organization">Join an Organization</string>

    <string-array name="organizations_list">
        <item>San Jose State University</item>
        <item>DeAnza College</item>
        <item>West Valley College</item>
    </string-array>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_dashboard_drawer">DashboardDrawerActivity</string>

    <string name="mission">Our mission is to bridge the mobility gap in
        Pakistan and connect commuters to opportunity and also empower women.
        To transform the transportation into next level by providing a social
        platform that helps every new and existing commuters in their commute.</string>

    <string name="vision">Commuters Family vision is to connect each and every neighbor commuter of same
        route and destination around the world and create a grand family of Commuters.</string>

    <string name="values">Accountability&#x0A;Commitment&#x0A;Continuous&#x0A;Improvement&#x0A;Diversity&#x0A;Integrity
        &#x0A;Passion&#x0A;Team Work&#x0A;Transparency</string>

    <string name="scr1">Connecting neighbours with same route for daily commute.</string>
    <string name="scr2">Find a neighbour that travels routinely on the same route as you.</string>
    <string name="scr3">Find a someone to travel with you has never been easier before.</string>
    <string name="scr4">Commuters family promotes a more productive commuter, drives down costs and leads to a less congested and greener community.</string>
    <string name="scr5">Our main aim is to make daily commute easier for daily commuters, sharing same route and time to reduce amount of vehicles on road and making transport system more efficient</string>
    <string name="scr6">Our mission is to bridge the mobility gap in Pakistan and opportunity to empower women. To transform the transportation into next level by providing a social platform that helps every new and existing commuters in their commute.</string>
    <string name="scr7">Schedule your transportation for work, college or university with the neighbors of same destination.</string>


</resources>
