<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mission"
                android:textStyle="bold"
                android:textColor="@color/quantum_black_100"
                android:textSize="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="20dp"
                android:text="@string/mission"
                android:textColor="@color/quantum_black_100"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vision"
                android:textStyle="bold"
                android:textColor="@color/quantum_black_100"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:textColor="@color/quantum_black_100"
                android:textSize="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Values"
                android:textStyle="bold"
                android:textColor="@color/quantum_black_100"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/values"
                android:textColor="@color/quantum_black_100"
                android:textSize="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>